--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^16.18.55",
 		"@types/react": "^18.2.24",
 		"@types/react-dom": "^18.2.8",
+		"axios": "^1.5.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.16.0",
@@ -25,7 +26,8 @@
 		"lint": "eslint src",
 		"lint:fix": "eslint src --fix",
 		"format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-		"postinstall": "husky install"
+		"postinstall": "husky install",
+		"json-server": "json-server --watch server.json --port 3001"
 	},
 	"browserslist": {
 		"production": [
@@ -52,6 +54,7 @@
 		"eslint-plugin-promise": "^6.0.0",
 		"eslint-plugin-react": "^7.33.2",
 		"husky": "^8.0.3",
+		"json-server": "^0.17.4",
 		"prettier": "^3.0.3"
 	}
 }
